# ceezaa-pilot

./: .gitignore  .mcp.json  APP_LAYOUT.md  CLAUDE.md  DESIGN_SYSTEM.md  DEV_PLAN.md  TECH_ARCH.md  design-preview.html
backend/: .env.example  .gitignore  PLAID_INTEGRATION.md  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/intelligence/: __init__.py  aggregation_engine.py  dna_generator.py  insight_generator.py  matching_engine.py  profile_titles.py  quiz_processor.py  ring_builder.py  taste_fusion.py  venue_tagger.py
backend/app/mappings/: __init__.py  category_mappings.py  mood_mappings.py  plaid_categories.py  price_mappings.py  profile_title_mappings.py  quiz_mappings.py  vibe_mappings.py
backend/app/models/: plaid.py
backend/app/routers/: auth.py  discover.py  onboarding.py  plaid.py  profile.py  sessions.py  taste.py  users.py  vault.py
backend/app/services/: __init__.py  google_places_service.py  plaid_client.py  plaid_service.py
backend/data/: places_api_test_results.json  venue_urls.json  venues_with_reviews.json
backend/scripts/: debug_apify.py  discover_venues.py  import_venues.py  test_google_places.py  test_venue_tagging.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_supabase.py
backend/tests/exploration/: __init__.py  test_plaid_link.py  test_plaid_transactions.py
backend/tests/integration/: test_plaid_endpoints.py
backend/tests/intelligence/: test_aggregation_engine.py  test_insight_generator.py  test_matching_engine.py  test_profile_titles.py  (+2 more)
(+182 files in other folders)
